--- a/k8s/mlab-staging/scraper-cluster/persistentvolumes/persistent-volumes.yml
+++ b/k8s/mlab-staging/scraper-cluster/persistentvolumes/persistent-volumes.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: auto-prometheus-disk0
+  name: auto-prometheus-ssd0
   annotations:
     volume.beta.kubernetes.io/storage-class: "fast"
 spec:
