--- a/k8s/mlab-staging/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/mlab-staging/prometheus-federation/deployments/prometheus.yml
@@ -44,7 +44,7 @@ spec:
       containers:
       # Check https://hub.docker.com/r/prom/prometheus/tags/ for the current
       # stable version.
-      - image: prom/prometheus:v1.5.2
+      - image: prom/prometheus:v1.6.2
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
@@ -54,6 +54,7 @@ spec:
                "-storage.local.path=/prometheus",
                "-storage.local.retention=2880h",
                "-alertmanager.url=http://alertmanager-public-service.default.svc.cluster.local:9093",
+               "-web.external-url=http://status-mlab-staging.measurementlab.net:9090",
                "-web.console.libraries=/usr/share/prometheus/console_libraries",
                "-web.console.templates=/usr/share/prometheus/consoles"]
         ports:
