--- a/k8s/mlab-oti/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/mlab-oti/prometheus-federation/deployments/prometheus.yml
@@ -29,7 +29,8 @@ spec:
     spec:
       # References a service account with RBAC permissions for accessing node
       # metrics. This is required for k8s version 1.6+.
-      serviceAccountName: prometheus
+      # TODO(soltesz): enable when cluster is upgraded to 1.6+
+      # serviceAccountName: prometheus
 
       # Clusters running a prometheus instance must label nodes exclusively for
       # use by prometheus. See README for steps to create a GKE cluster for
