Add comments for locating slack webhook urls

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -73,6 +73,10 @@ inhibit_rules:
 receivers:
 # For M-Lab Slack, visit:
 #   https://measurementlab.slack.com/apps/manage/custom-integrations
+# Follow the "Incoming WebHooks link", and either add a new configuration or
+# edit one of the existing configurations. Copy the "Webhook URL" from the
+# slack configuration to the `api_url` values below.
+
 - name: 'slack-alerts-page'
   slack_configs:
   - send_resolved: true
