Use golang flag prefixes.

--- a/k8s/mlab-oti/prometheus-federation/deployments/github-receiver.yml
+++ b/k8s/mlab-oti/prometheus-federation/deployments/github-receiver.yml
@@ -24,8 +24,8 @@ spec:
             secretKeyRef:
               name: github-secrets
               key: auth-token
-        args: [ "--authtoken=$(GITHUB_AUTH_TOKEN)",
-                "--owner=m-lab",
-                "--repo=scraper" ]
+        args: [ "-authtoken=$(GITHUB_AUTH_TOKEN)",
+                "-owner=m-lab",
+                "-repo=scraper" ]
         ports:
         - containerPort: 9393
