Add commented configs for the github receiver webhook url.

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -90,6 +90,8 @@ receivers:
     # api_url:
     # channel: alerts-oti
     username: alert-page
+  #webhook_configs:
+  #- url: 'http://status-mlab-oti.measurementlab.net:9393/v1/receiver'
 
 - name: 'slack-alerts-email'
   slack_configs:
@@ -104,3 +106,5 @@ receivers:
     # api_url:
     # channel: alerts-oti
     username: alert-email
+  #webhook_configs:
+  #- url: 'http://status-mlab-oti.measurementlab.net:9393/v1/receiver'
