--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -415,3 +415,10 @@ scrape_configs:
       # Copy all labels from the aeflex service discovery.
       - action: labelmap
         regex: __aef_(.+)
+        
+  # Scrape config for the annotation service
+  - job_name: 'annotation-service'
+    static_configs:
+      - targets: ['annotator-dot-mlab-sandbox.appspot.com']
+
+
