--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -417,6 +417,7 @@ scrape_configs:
         regex: __aef_(.+)
         
   # Scrape config for the annotation service
+  # TODO(JM) add for individual instances, rather than the general URL
   - job_name: 'annotation-service'
     static_configs:
       - targets: ['annotator-dot-mlab-sandbox.appspot.com']
