--- a/k8s/mlab-sandbox/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/mlab-sandbox/prometheus-federation/deployments/prometheus.yml
@@ -58,7 +58,7 @@ spec:
                "-storage.local.path=/prometheus",
                "-storage.local.retention=2880h",
                "-alertmanager.url=http://alertmanager-public-service.default.svc.cluster.local:9093",
-               "-web.external-url=http://status-mlab-staging.measurementlab.net:9090",
+               "-web.external-url=http://status-mlab-sandbox.measurementlab.net:9090",
                "-web.console.libraries=/usr/share/prometheus/console_libraries",
                "-web.console.templates=/usr/share/prometheus/consoles"]
         ports:
