--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -310,6 +310,7 @@ scrape_configs:
         # all match parameters.
         - 'up{application="scraper"}'
         - 'up{application="scraper-sync"}'
+        - 'up{deployment="downloader"}'
         - 'scraper_maxrawfiletimearchived'
         - 'scraper_lastcollectionattempt'
 
