--- a/k8s/mlab-sandbox/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/mlab-sandbox/prometheus-federation/deployments/prometheus.yml
@@ -22,10 +22,8 @@ spec:
         # public IP and port so that it is publically accessible.
         run: prometheus-server
       annotations:
-        # Tell prometheus service discovery to scrape the node-exporter running
-        # within the prometheus-server pod.
+        # Tell prometheus service discovery to scrape the pod containers.
         prometheus.io/scrape: 'true'
-        prometheus.io/port: '9100'
     spec:
       # References a service account with RBAC permissions for accessing node
       # metrics. This is required for k8s version 1.6+.
