--- a/k8s/mlab-oti/scraper-cluster/deployments/prometheus.yml
+++ b/k8s/mlab-oti/scraper-cluster/deployments/prometheus.yml
@@ -22,8 +22,7 @@ spec:
         # public IP and port so that it is publically accessible.
         run: prometheus-server
       annotations:
-        # Tell prometheus service discovery to scrape the node-exporter running
-        # within the prometheus-server pod.
+        # Tell prometheus service discovery to scrape the pod containers.
         prometheus.io/scrape: 'true'
     spec:
       # References a service account with RBAC permissions for accessing node
