--- a/k8s/mlab-sandbox/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/mlab-sandbox/prometheus-federation/deployments/prometheus.yml
@@ -127,9 +127,11 @@ spec:
                 "--http-target=/targets/legacy-targets/sidestream.json",
                 "--http-target=/targets/blackbox-targets/ssh806.json",
                 "--http-target=/targets/blackbox-targets/rsyncd.json",
+                "--http-target=/targets/blackbox-targets/snmpexporter.json",
                 "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/legacy-targets/sidestream.json",
                 "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/ssh806.json",
                 "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/rsyncd.json",
+                "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/snmpexporter.json",
                 "--project=$(GCLOUD_PROJECT)"]
         resources:
           requests:
