--- a/k8s/mlab-sandbox/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/mlab-sandbox/prometheus-federation/deployments/prometheus.yml
@@ -129,10 +129,12 @@ spec:
         args: [ "--aef-target=/targets/aeflex-targets/aeflex.json",
                 "--gke-target=/targets/federation-targets/prometheus-clusters.json",
                 "--http-target=/targets/legacy-targets/sidestream.json",
+                "--http-target=/targets/legacy-targets/lameduck.json",
                 "--http-target=/targets/blackbox-targets/ssh806.json",
                 "--http-target=/targets/blackbox-targets/rsyncd.json",
                 "--http-target=/targets/snmp-targets/snmpexporter.json",
                 "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/legacy-targets/sidestream.json",
+                "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/legacy-targets/lameduck.json",
                 "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/ssh806.json",
                 "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/rsyncd.json",
                 "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/snmp-targets/snmpexporter.json",
