--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -376,6 +376,7 @@ scrape_configs:
   # SNMP configurations.
   - job_name: 'snmp-targets'
     metrics_path: /snmp
+    scrape_timeout: 30s
 
     file_sd_configs:
       - files:
