--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,12 @@ cache:
 go_import_path: github.com/m-lab/prometheus-support
 
 install:
-- go get -d github.com/prometheus/prometheus/cmd/promtool
-- git -C $GOPATH/src/github.com/prometheus/prometheus/cmd/promtool/ checkout -b 1.8.0 tags/v1.8.0
-- go install github.com/prometheus/prometheus/cmd/promtool
+- PROMTOOL_URI=github.com/prometheus/prometheus/cmd/promtool;
+  PROMTOOL_VERSION=1.8.0;
+  go get -d $PROMTOOL_URL;
+  git -C $GOPATH/src/$PROMTOOL_URI
+  checkout -b $PROMTOOL_VERSION tags/v$PROMTOOL_VERSION;
+  go install $PROMTOOL_URI
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh kubectl
 
 script:
