Adds a small comment about pinning the promtool version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
 go_import_path: github.com/m-lab/prometheus-support
 
 install:
+  # Install promtool and pin it at the latest stable version, currently 1.8.0
 - PROMTOOL_URI=github.com/prometheus/prometheus/cmd/promtool;
   PROMTOOL_VERSION=1.8.0;
   go get -d $PROMTOOL_URI;
