Adds back the '-args -log.level warn' flag to query_tester, since pinning promtool in previous PR likely fixes the earlier breakage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
 
 script:
 # Run query "unit tests".
-- go test -v github.com/m-lab/prometheus-support/cmd/query_tester
+- go test -v github.com/m-lab/prometheus-support/cmd/query_tester -args -log.level warn
 
 # Use promtool to check current alerts and rules. This is only a syntax check.
 - promtool check-rules config/federation/prometheus/alerts.yml
