Enable Google OAuth login

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -178,7 +178,7 @@
 
 [auth]
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
-;disable_login_form = false
+disable_login_form = true
 
 #################################### Anonymous Auth ##########################
 [auth.anonymous]
@@ -206,15 +206,14 @@
 
 #################################### Google Auth ##########################
 [auth.google]
-;enabled = false
-;allow_sign_up = true
-;client_id = some_client_id
-;client_secret = some_client_secret
-;scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
-;auth_url = https://accounts.google.com/o/oauth2/auth
-;token_url = https://accounts.google.com/o/oauth2/token
-;api_url = https://www.googleapis.com/oauth2/v1/userinfo
-;allowed_domains =
+enabled = true
+allow_sign_up = true
+;client_id = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_ID>
+;client_secret = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_SECRET>
+scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
+auth_url = https://accounts.google.com/o/oauth2/auth
+token_url = https://accounts.google.com/o/oauth2/token
+api_url = https://www.googleapis.com/oauth2/v1/userinfo
 
 #################################### Generic OAuth ##########################
 [auth.generic_oauth]
