--- a/k8s/scraper-cluster/persistentvolumes/persistent-volumes.yml
+++ b/k8s/scraper-cluster/persistentvolumes/persistent-volumes.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: auto-prometheus-ssd0
+  name: {{PROMETHEUS_VOLUME_NAME}}
   annotations:
     volume.beta.kubernetes.io/storage-class: "fast"
 spec:
