--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -408,6 +408,13 @@ scrape_configs:
         target_label: __address__
         replacement: snmp-exporter.${1}.measurementlab.net:9116
 
+      # Most all 'ifAlias' labels will be empty. Rather than pollute the
+      # datastore with a bunch of empty labels, only keep the ones that have
+      # some value.
+      - source_labels: [ifAlias]
+        regex: .+
+        action: labelkeep
+
   # Scrape config for pushgateway.
   #
   # Push gateways allow services to publish metrics for later collection by
