Looks for empty 'ifAlias' labels and sets their 'replacement' to an empty string, which supposedly removes the label.

--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -416,8 +416,9 @@ scrape_configs:
       # datastore with a bunch of empty labels, only keep the ones that have
       # some value.
       - source_labels: [ifAlias]
-        regex: .+
-        action: labelkeep
+        regex: ^$
+        target_label: ifAlias
+        replacement: ""
 
   # Scrape config for pushgateway.
   #
