--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -292,9 +292,7 @@ scrape_configs:
   - job_name: 'snmp-exporter'
     static_configs:
       - targets:
-        - snmp-exporter.mlab-sandbox.measurementlab.net:9116/metrics
-        - snmp-exporter.mlab-staging.measurementlab.net:9116/metrics
-        - snmp-exporter.mlab-oti.measurementlab.net:9116/metrics
+        - snmp-exporter.{{PROJECT}}.measurementlab.net:9116/metrics
 
 
   # Scrape config for federation.
